fixed overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   margin: 0px;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 :root{
   --cyan:hsl(180, 66%, 49%);
   --dark-violet:hsl(257, 27%, 26%);
